--- a/A2_Comp_Project/app/src/main/AndroidManifest.xml
+++ b/A2_Comp_Project/app/src/main/AndroidManifest.xml
@@ -2,22 +2,48 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.natha_000.a2_comp_project"
     android:versionCode="1"
-    android:versionName="1.0" >
-    <uses-permission android:name="android.permission.INTERNET" />
+    android:versionName="1.0">
+
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="24" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- Indicates use of Android's VR-mode, available only on Android N+. -->
+    <uses-feature
+        android:name="android.software.vr.mode"
+        android:required="false" />
+    <!-- Indicates use of VR features that are available only on Daydream-ready devices. -->
+    <uses-feature
+        android:name="android.hardware.vr.high_performance"
+        android:required="false" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture" />
+    <supports-gl-texture android:name="GL_OES_compressed_paletted_texture" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/mathspepe"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.natha_000.a2_comp_project.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,14 +51,35 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.natha_000.a2_comp_project.Main2DActivity"
+            android:name=".Main2DActivity"
             android:configChanges="orientation|screenSize|keyboardHidden" />
-        <activity android:name="com.example.natha_000.a2_comp_project.Main3DActivity" />
         <activity
-            android:name="com.example.natha_000.a2_comp_project.MainStatsActivity"
+            android:name=".Main3DActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".MainStatsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_main_stats"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Main3DVRActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:enableVrMode="@string/gvr_vr_mode_component"
+            android:label="@string/title_activity_main3_dvr"
+            android:resizeableActivity="false"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <category android:name="com.google.intent.category.CARDBOARD" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Intemediary3D"
+            android:label="@string/title_activity_intemediary3_d"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".TabbedStatsActivity"
+            android:label="@string/title_activity_tabbed_stats"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
