--- a/A2_Comp_Project/app/build.gradle
+++ b/A2_Comp_Project/app/build.gradle
@@ -26,6 +26,7 @@ android {
         compile 'com.google.vr:sdk-audio:1.10.0'
         compile 'com.google.vr:sdk-base:1.10.0'
     }
+    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/2'] } }
 }
 
 dependencies {
