--- a/A2_Comp_Project/app/src/main/AndroidManifest.xml
+++ b/A2_Comp_Project/app/src/main/AndroidManifest.xml
@@ -57,11 +57,6 @@
             android:name=".Graphing_3D.Main3DActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".Graphing_Stats.MainStatsActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_main_stats"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".Graphing_3D.Main3DVRActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:enableVrMode="@string/gvr_vr_mode_component"
@@ -79,7 +74,7 @@
         <activity
             android:name=".Graphing_Stats.TabbedStatsActivity"
             android:label="@string/title_activity_tabbed_stats"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
